Revision history for HTTP-Message

{{$NEXT}}

6.32      2021-05-18 18:54:27Z
    - Use File::Spec for MSWin32 on Content-Disposition filename (GH#157)
      (tzccinct)

6.31      2021-05-11 18:07:37Z
    - Fix test writing to files (GH#156) (Michal Josef Špaček)

6.30      2021-05-10 14:55:55Z
    - Don't inherit from Exporter anymore (GH#155) (Max Maischein)
    - Remove superfluous Perl version requirement. This module requires Perl
      5.6 or newer. (GH#155) (Max Maischein)

6.29      2021-03-06 04:50:34Z
    - fix issue with HTTP::Request internal cache for canonical url when using
      URI::URL (GH#146) (andrew-grechkin)

6.28      2021-02-19 16:22:13Z
    - fix warnings during HTTP::Config->match #62 (GH#152) (Viťas Strádal)

6.27      2021-01-05 03:02:01Z
    - Clean up backcompat code (GH#148) (Dan Book)
    - Add "308 Permanent Redirect" to is_cacheable_by_default (GH#150) (simbabque)

6.26      2020-09-10 02:34:25Z
    - Update comment which explains in which RFC 451 is defined (GH#143) (Olaf
      Alders). Reported by Toby Inkster.
    - Fix HTTP status descriptions and add 425 Too Early (GH#145) (Dan Book)

6.25      2020-06-28 17:52:12Z
    - Don't run Changes test on master in GH actions
    - move Clone from required to suggests prerequisite, to re-enable
      fatpacking

6.24      2020-05-11 13:15:25Z
    - Full release.  No changes since TRIAL release 6.23

6.23      2020-05-07 17:57:18Z (TRIAL RELEASE)
    - Enable static install (GH#134) (Olaf Alders)
    - Support non-string header values that stringify (GH#137) (Will Storey)

6.22      2020-02-24 18:58:07Z
    - Full release.  No changes since TRIAL release 6.21

6.21      2020-02-19 14:35:09Z (TRIAL RELEASE)
    - Bump Encode to latest version (3.01) (GH#129) (Olaf Alders)
    - Revert #115 (GH#131) (Olaf Alders)
    - Revert (GH#125) "try hard to make a usable file name" (GH#130) (Olaf
      Alders)
    - Fix JSON request encoding examples in POD (GH#126) (Michael Schout)
