@@ -1,6 +1,8 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Allow `can` method to respond to delegated methods (GH#159) (nanto_vi,
+      TOYAMA Nao)
 
 6.32      2021-05-18 18:54:27Z
     - Use File::Spec for MSWin32 on Content-Disposition filename (GH#157)
